# spiderThrift

./: README.md
spider-client/lib/: libboost_system.so.1.64.0  libboost_thread.so.1.64.0
spider-client/redis/: redis.h  redisConf.cc  redisConf.h  redisConf.json
spider-client/src/: MyLog.h  main.cpp
spider-client/thrift/gen-cpp/: .Myserver.cpp.swp  MyClient.cpp  MyServer.cpp  Spider.cpp  Spider.h  spiderDownloadInfo_constants.cpp  spiderDownloadInfo_constants.h  spiderDownloadInfo_types.cpp  spiderDownloadInfo_types.h
spider-server/: CMakeLists.txt  build.sh
spider-server/redis/: CMakeLists.txt  redis.cc
spider-server/src/: MyLog.cpp  spiderHandler.cpp  spiderHandler.h
